--- a/test/roomInside.html
+++ b/test/roomInside.html
@@ -105,7 +105,7 @@
                     <div class="chat-body">
                       <div class="chat-message">
                         <h5 class="name">Super Cool Name</h5>
-                        <p>akshay is madarchod</p>
+                        <p>akshay is awesome</p>
                       </div>
                     </div>
                   </li>
