--- a/test/home.html
+++ b/test/home.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="stylehome.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
        <div class="container">
             <div class="postbox mx-2 my-4 py-2">
                 <div class="uname"><h4>Name</h4></div>
-                <img class="my-2" src="akshay.jpg" alt="">
+                <img class="my-2" src="https://source.unsplash.com/1080x1080/?nature,scenery" alt="">
                 <div class="like">
                     <i class="far fa-thumbs-up mx-2"></i>
                     <i class="far fa-comment mx-2 "></i>
@@ -22,7 +22,7 @@
             </div>
             <div class="postbox mx-2 py-2">
                 <div class="uname"><h3>Name</h3></div>
-                <img class="my-2" src="akshay.jpg" alt="">
+                <img class="my-2" src="https://source.unsplash.com/1080x1080/?nature,sky" alt="">
                 <div class="like">
                     <i class="far fa-thumbs-up mx-2"></i>
                     <i class="far fa-comment mx-2 "></i>
