--- a/test/login.html
+++ b/test/login.html
@@ -10,11 +10,11 @@
     <title>Login</title>
 </head>
 <body>
-  <h1>Please Login</h1>
+  <h1 class="loginheading">Please Login</h1>
       
-  <div  class="container container1 px-4 py-2">
+  <div  class="logincontainer mx-auto px-4 py-md-2">
 
-    <form>
+    <form class="loginform">
       <div class="form-group my-3">
         <input
           type="text"
@@ -34,13 +34,13 @@
         />
       </div>
       <div class="row">
-      <div class="form-group col-lg-5 text-center my-3">
-        <button class="btn btn-dark" id="submit1">Login</button>
+      <div class="form-group col-lg-5 text-center my-3 ">
+        <button class="loginsubmit btn btn-dark">Login</button>
       </div> 
       
-     <div id="or" class="col-lg-2 "><h3>or</h3></div>
+     <div  class="or col-lg-2 my-3"><h3>or</h3></div>
      <div class="form-group col-lg-5 my-3">
-     <button class="btn btn-dark" id="submit2">Signup</button>
+     <button class="loginsubmit btn btn-dark sgnpbtn">Signup</button>
     </div> 
 
   </div>
