--- a/test/home.html
+++ b/test/home.html
@@ -18,8 +18,9 @@
                 <div class="caption m-1">dont be cool be awesome</div>
                 <div class="row like mt-3">
                    <div class="col-lg-5"><i class="far fa-thumbs-up"></i><span><p>33</p></span></div> 
-                   
+                   <div class="col-lg-5"> <i class="fas fa-thumbs-up"></i><span><p>33</p></span></div> 
                     <div class="col-lg-3"><i class="far fa-comment  "></i></div>
+                    <i class="fas fa-thumbs-up"></i>
                 </div>
             </div>
             <!-- <div class="postbox mx-2 py-2">
